--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -301,7 +301,7 @@
     max-width: fit-content;
     margin: 0 auto;
     justify-content: center;
-    margin-left: 100px;
+    transform: translateX(100px);
   }
 
   .what-matters-grid .main-title {
